feat: add header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>Клиника</title>
 </head>
-<body>
+<body class="page">
+        <header class="header">
+            <div class="header__top-bar">
+                <div class="header__item">
+                    <img src="./images/icons/logo.svg" alt="Логотип" class="logo">
+                <div class="header__geoposition">
+                    <p class="header__town">Ростов-на-Дону</p>
+                    <p class="header__street">ул. Ленина, 2Б</p>
+                </div>
+                </div>
     
+                <div class="header__item">
+                    <div class="header__call">
+                        <img src="./images/icons/social/whatsapp.svg" alt="WhatsApp" class="header__num-icon">
+                        <a href="tel:88630000000" class="header__number">+7(863) 000 00 00</a>
+                    </div>
+                    <button class="header__btn">Записаться на прием</button>        
+                </div>
+            </div>
+
+            <nav class="header__menu-bar menu">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="#" class="menu__link">О клинике</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Специалисты</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Цены</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                </ul>
+            </nav>
+        </header>
 </body>
 </html>
